# zenpng

./: .gitignore  .plan  2-26-26-tables.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cargo.toml.original.txt  FEEDBACK.md  README.crates.md  README.md  TUNING.md  analyze_zopfli.py  heaptrack.cargo.13290.zst  ideas.md  justfile
.github/workflows/: ci.yml  fuzz.yml
apidoc/: Cargo.toml
benches/: fused_predicates.rs  scalar_vs_simd.rs  scan_predicates.rs
benchmarks/: README.md  crusher_bench_2026-02-26.csv  effort_curve_2026-02-26.csv  gen_effort_charts.py  png_resource_alphadepth_2026-06-14.tsv  png_resource_higheffort_2026-06-14.tsv  png_resource_main_2026-06-14.tsv  vcpu_resource_sweep_2026-06-20.tsv  zenpng_arm_sub_unfilter_2026-05-29.tsv  zenpng_encode_mem_2026-06-23.tsv
benchmarks/pickers/: README.md  zenpng_lossless_cart_ssim2_2026-06-28.pointer.md  zenpng_lossless_cart_ssim2_2026-06-28.rs  zenpng_lossless_cart_zensim_2026-06-28.pointer.md  zenpng_lossless_cart_zensim_2026-06-28.rs
docs/: VARIANT_GENERATION.md
docs/public-api/: ABLATION-zenpng.md  zenpng.features.txt  zenpng.internal.txt  zenpng.txt
examples/: apng_bench.rs  bench_delta.rs  corpus_bench.rs  corpus_profiler.rs  crusher_bench.rs  decode_bench.rs  decode_only.rs  deflate_bench.rs  deflate_compare.rs  effort_curve.rs  effort_timing.rs  fastest_test.rs  full_optimal_bench.rs  heaptrack_streaming.rs  inflate_bench.rs  joint_bench.rs  mem_probe_encode.rs  metadata_roundtrip.rs  monotonicity_bench.rs  phase_timing.rs  png_probe.rs  probe_dedup_bench.rs  single_crush_test.rs  single_effort.rs  single_image_lab.rs  strategy_explorer.rs  time_levels.rs  unfilter_bench.rs  zoint_bench.rs
fuzz/: Cargo.toml  png.dict
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_apng.rs  fuzz_decode_strict.rs  fuzz_probe.rs
fuzz/regression/: crash-d9bc7fc8cb4c2290d2393365384dd35a2fd4d7da
scripts/: analyze_effort_curve.py  cluster_corpus.py  png_resource_calibrate.py  vcpu_resource_fit.py  vcpu_resource_sweep.sh
specs/: png-3-spec.html
src/: alloc_util.rs  codec.rs  decode.rs  detect.rs  encode.rs  error.rs  gamut.rs  heuristics.rs  indexed.rs  indexed_writer.rs  internal_params.rs  lib.rs  optimize.rs  png_reader.rs  png_writer.rs  quantize.rs  sweep.rs  types.rs  wasm_tests.rs  zencodec.rs  zennode_defs.md  zennode_defs.rs  zenode_defs.rs
src/chunk/: ancillary.rs  ihdr.rs  mod.rs  write.rs
src/decoder/: apng.rs  interlace.rs  mod.rs  postprocess.rs  row.rs
src/encoder/: apng.rs  compress.rs  filter.rs  metadata.rs  mod.rs
src/simd/: avg.rs  mod.rs  paeth.rs  scan.rs  sub.rs  up.rs
tests/: integration.rs  public_api_doc.rs  sweep_validate.rs
tests/integration/: cicp_chunk_emit.rs  probe_parity.rs  simd_consistency.rs  truncation_series.rs
