[package]
name = "zenpng"
version = "0.1.3"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "PNG encoding and decoding with zencodec trait integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["png", "image", "encoder", "decoder", "codec"]
repository = "https://github.com/imazen/zenpng"
exclude = ["CLAUDE.md", "CONTEXT-HANDOFF.md", "FEEDBACK.md", "justfile", "specs/", "heaptrack.*", ".plan", "benchmarks/", "TUNING.md", "2-26-26-tables.md", "analyze_zopfli.py", ".github/", ".claude/", ".superwork/", ".zenbench/", "copter-report/", "Cross.toml", "Cargo.toml.original.txt", "fuzz/"]

[dependencies]
thiserror = { version = "2.0", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
imgref = "1.12"
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc"] }
enough = "0.4.2"
zencodec = { version = "0.1.16" }
zenpixels = { version = "0.2.7", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.7", features = ["imgref"] }
zenquant = { version = "0.1.1", optional = true }
imagequant = { version = "4", optional = true }
quantette = { version = "0.5", optional = true, default-features = false, features = ["kmeans", "std"] }
whereat = "0.1.4"
zenflate = { version = "0.3.2" }
archmage = { version = "0.9.14", default-features = false, features = ["macros", "std"] }
safe_unaligned_simd = { version = "0.2.5", default-features = false }
linear-srgb = "0.6.5"
zenzop = { version = "0.4.1", optional = true, default-features = false, features = ["zlib", "std"] }
# zennode = { git = "https://github.com/imazen/zennode.git", optional = true, default-features = false, features = ["derive"] }
almost-enough = { version = "0.4.2", features = ["std"] }

[dev-dependencies]
png = "0.18"
flate2 = "1"
miniz_oxide = "0.8"
zopfli = "0.8"
lodepng = "3.12.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
codec-corpus = "1.0.2"
libdeflater = "1.25"

[profile.test]
opt-level = 2

[features]
default = ["quantize"]
quantize = ["dep:zenquant"]
imagequant = ["dep:imagequant"]
quantette = ["dep:quantette"]
joint = ["quantize", "zenquant/joint"]
unchecked = ["zenflate/unchecked"]
zopfli = ["dep:zenzop"]
zencodec = []
# zennode = ["dep:zennode"]
_dev = ["archmage/testable_dispatch"]

[[example]]
name = "phase_timing"
required-features = ["_dev"]

[[example]]
name = "decode_bench"
required-features = ["_dev"]

[[example]]
name = "joint_bench"
required-features = ["joint"]

[[example]]
name = "bench_delta"
required-features = ["quantize", "_dev"]

[[example]]
name = "strategy_explorer"
