[package]
name = "zenpng"
version = "0.1.4"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "PNG encoding and decoding with zencodec trait integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["png", "image", "encoder", "decoder", "codec"]
repository = "https://github.com/imazen/zenpng"
include = [
    "/src/**",
    "/examples/**",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE*",
]

[dependencies]
thiserror = { version = "2.0", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
imgref = "1.12"
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc"] }
enough = "0.4.2"
zencodec = { version = "0.1.25" }
zenpixels = { version = "0.2.11", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.13", features = ["imgref"] }
zenquant = { version = "0.1.1", optional = true }
imagequant = { version = "4", optional = true }
quantette = { version = "0.5", optional = true, default-features = false, features = ["kmeans", "std"] }
whereat = "0.1.4"
zenflate = { version = "0.3.2" }
memchr = { version = "2.8.0", default-features = false }
archmage = { version = "0.9.23", default-features = false, features = ["macros", "std", "avx512"] }
magetypes = { version = "0.9.23", default-features = false, features = ["std", "w512", "avx512"] }
safe_unaligned_simd = { version = "0.2.5", default-features = false }
linear-srgb = "0.6.5"
zenzop = { version = "0.4.1", optional = true, default-features = false, features = ["zlib", "std"] }
# zennode = { git = "https://github.com/imazen/zennode.git", optional = true, default-features = false, features = ["derive"] }
almost-enough = { version = "0.4.2", features = ["std"] }

[dev-dependencies]
png = "0.18"
flate2 = "1"
miniz_oxide = "0.8"
zopfli = "0.8"
lodepng = "3.12.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
codec-corpus = "1.0.2"
libdeflater = "1.25"
zenbench = "0.1.8"

[profile.test]
opt-level = 2

[features]
default = ["quantize"]
quantize = ["dep:zenquant"]
imagequant = ["dep:imagequant"]
quantette = ["dep:quantette"]
joint = ["quantize", "zenquant/joint"]
unchecked = ["zenflate/unchecked"]
zopfli = ["dep:zenzop"]
# ICC synthesis for the zencodec color-emit path, via zenpixels-convert's
# `icc-db` feature: a bundled LZ4 profile blob + pure-Rust lz4_flex decoder —
# no moxcms. Covers the full ITU-T H.273 grid incl PQ/HLG (without it, only
# the bundled Display-P3 / SDR BT.2020 / AdobeRGB consts synthesize, and an
# off-grid CICP is an encode error — never a silently mislabeled image).
cms = ["zenpixels-convert/icc-db"]
# zennode = ["dep:zennode"]
# Expert-only cross-codec uniformity knobs. Pure visibility gate (no deps):
# exposes `InternalParams` + `EncodeConfig::with_internal_params`, mirroring
# `zenjpeg`'s `__expert` feature so a single picker model can drive every zen
# codec with one Option-bundle shape. No new tunables — the fields just route
# through existing public builder setters.
__expert = []
_dev = ["archmage/testable_dispatch"]
# Acknowledged by archmage's `incant!` cfg — kept always-on; no-op for users
# (we always compile the AVX-512 path so V4x dispatch is available at runtime).
avx512 = []

[[example]]
name = "phase_timing"
required-features = ["_dev"]

[[example]]
name = "decode_bench"
required-features = ["_dev"]

[[example]]
name = "unfilter_bench"
required-features = ["_dev"]

[[example]]
name = "joint_bench"
required-features = ["joint"]

[[example]]
name = "bench_delta"
required-features = ["quantize", "_dev"]

[[example]]
name = "strategy_explorer"

[[bench]]
name = "scan_predicates"
harness = false
required-features = ["_dev"]

[[bench]]
name = "fused_predicates"
harness = false
required-features = ["_dev"]

[[bench]]
name = "scalar_vs_simd"
harness = false
required-features = ["_dev"]

[patch.crates-io]
# TEMP: until zencodec 0.1.26 ships (PR #103) — provides the unreleased
# `CategorizedError` taxonomy (trait + `ErrorCategory` + `LimitKind`). Remove
# this patch and bump the `zencodec` version dependency once 0.1.26 is published.
zencodec = { git = "https://github.com/imazen/zencodec", branch = "cancellation-classification-99" }
