[package]
name = "zenpng"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
description = "PNG encoding and decoding with zencodec trait integration"
categories = ["multimedia::images", "multimedia::encoding"]
keywords = ["png", "image", "encoder", "decoder", "codec"]
repository = "https://github.com/imazen/zenpng"
readme = "README.crates.md"
include = [
    "/src/**",
    "/examples/**",
    "/README.crates.md",
    "/CHANGELOG.md",
    "/LICENSE*",
]

[dependencies]
thiserror = { version = "2.0", default-features = false }
rgb = { version = "0.8", default-features = false, features = ["as-bytes"] }
imgref = "1.12"
bytemuck = { version = "1.25", default-features = false, features = ["extern_crate_alloc"] }
enough = "0.4.2"
zencodec = { version = "0.1.26" }
zenpixels = { version = "0.2.11", default-features = false, features = ["imgref"] }
zenpixels-convert = { version = "0.2.13", features = ["imgref"] }
zenquant = { version = "0.1.1", optional = true }
imagequant = { version = "4", optional = true }
quantette = { version = "0.5", optional = true, default-features = false, features = ["kmeans", "std"] }
whereat = "0.1.4"
zenflate = { version = "0.3.2" }
memchr = { version = "2.8.0", default-features = false }
archmage = { version = "0.9.23", default-features = false, features = ["macros", "std", "avx512"] }
magetypes = { version = "0.9.23", default-features = false, features = ["std", "w512", "avx512"] }
safe_unaligned_simd = { version = "0.2.5", default-features = false }
linear-srgb = "0.6.5"
zenzop = { version = "0.4.1", optional = true, default-features = false, features = ["zlib", "std"] }
# zennode = { git = "https://github.com/imazen/zennode.git", optional = true, default-features = false, features = ["derive"] }
almost-enough = { version = "0.4.2", features = ["std"] }

[dev-dependencies]
png = "0.18"
flate2 = "1"
miniz_oxide = "0.8"
zopfli = "0.8"
lodepng = "3.12.2"
# zencodec conformance harness (unpublished companion crate). Git-pinned to the
# SAME zencodec tag as the [patch.crates-io] below so both resolve to one
# unified zencodec. Provides check_decode_truncation_series (EOF/truncation).
# Drop for a crates.io version dep once zencodec-testkit itself publishes
# (zencodec 0.1.26 already shipped; this tag is byte-identical to that release).
zencodec-testkit = { git = "https://github.com/imazen/zencodec", tag = "v0.1.26" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
codec-corpus = "1.0.2"
libdeflater = "1.25"
zenbench = "0.1.8"

[profile.test]
opt-level = 2

[features]
default = ["quantize"]
quantize = ["dep:zenquant"]
imagequant = ["dep:imagequant"]
quantette = ["dep:quantette"]
joint = ["quantize", "zenquant/joint"]
unchecked = ["zenflate/unchecked"]
zopfli = ["dep:zenzop"]
# Deprecated no-op stub: `zencodec` has been a required (always-on) dependency
# since 0.2.0, so this feature gates nothing. Kept for one release cycle so
# downstream `--features zencodec` (e.g. zenpipe/zencodecs) still resolves
# instead of hard-erroring with "Package 'zenpng' does not have feature
# 'zencodec'". Remove once those consumers drop the explicit feature request.
zencodec = []
# ICC synthesis for the zencodec color-emit path, via zenpixels-convert's
# `icc-db` feature: a bundled LZ4 profile blob + pure-Rust lz4_flex decoder —
# no moxcms. Covers the full ITU-T H.273 grid incl PQ/HLG (without it, only
# the bundled Display-P3 / SDR BT.2020 / AdobeRGB consts synthesize, and an
# off-grid CICP is an encode error — never a silently mislabeled image).
cms = ["zenpixels-convert/icc-db"]
# zennode = ["dep:zennode"]
# Expert-only cross-codec uniformity knobs. Pure visibility gate (no deps):
# exposes `InternalParams` + `EncodeConfig::with_internal_params`, mirroring
# `zenjpeg`'s `__expert` feature so a single picker model can drive every zen
# codec with one Option-bundle shape. No new tunables — the fields just route
# through existing public builder setters.
__expert = []
_dev = ["archmage/testable_dispatch"]
# Acknowledged by archmage's `incant!` cfg — kept always-on; no-op for users
# (we always compile the AVX-512 path so V4x dispatch is available at runtime).
avx512 = []

[[example]]
name = "phase_timing"
required-features = ["_dev"]

[[example]]
name = "decode_bench"
required-features = ["_dev"]

[[example]]
name = "unfilter_bench"
required-features = ["_dev"]

[[example]]
name = "joint_bench"
required-features = ["joint"]

[[example]]
name = "bench_delta"
required-features = ["quantize", "_dev"]

[[example]]
name = "strategy_explorer"

[[bench]]
name = "scan_predicates"
harness = false
required-features = ["_dev"]

[[bench]]
name = "fused_predicates"
harness = false
required-features = ["_dev"]

[[bench]]
name = "scalar_vs_simd"
harness = false
required-features = ["_dev"]

[patch.crates-io]
# zencodec-testkit is unpublished (path-deps zencodec internally); unify the
# graph on the content-identical released tag until the testkit ships on
# crates.io. Without this patch, Cargo resolves two distinct `zencodec`
# instances (crates.io 0.1.26 direct vs. git-via-testkit), and
# `tests/integration/truncation_series.rs` (which passes zenpng's own
# `PngDecoderConfig` into testkit's `check_decode_truncation_series<D:
# DecoderConfig>`) fails to typecheck across the two instances (E0277 — the
# trait bound is on a *different* `DecoderConfig`). `tag = "v0.1.26"` is
# commit 998edf5f, byte-identical to the published crate — keep this in sync
# with the `zencodec-testkit` dev-dep's tag above.
zencodec = { git = "https://github.com/imazen/zencodec", tag = "v0.1.26" }
