[package]
name = "zenpng-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
enough = "0.4"

[dependencies.zenpng]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe"
path = "fuzz_targets/fuzz_probe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_apng"
path = "fuzz_targets/fuzz_decode_apng.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_strict"
path = "fuzz_targets/fuzz_decode_strict.rs"
test = false
doc = false
bench = false

# TEMP mirror of the workspace-root [patch.crates-io]: the fuzz crate is its own
# workspace, so it does NOT inherit the parent patch. Drop both together when
# zencodec 0.1.26 (PR #103 taxonomy) is published. Pinned to a commit rev (not
# the branch tip) for reproducible builds — keep this in sync with the root
# Cargo.toml's rev.
[patch.crates-io]
zencodec = { git = "https://github.com/imazen/zencodec", rev = "fde07d075711ab1f9a02a935f61e1d3cc655c3a3" }

